Added tml and git notes

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -15,7 +15,75 @@
         />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>element types are commonly used to add content to pages.</li> 
+          <li>Text elements</li>
+          <li>Image elements</li>
+          <li>Header elements</li>
+          <li>List elements</li>
+          <br />
+          <li>Common element types that are used to divide and describe a page.</li>
+          <li>Meta-related elements</li>
+          <li>Content division elements</li>
+          <li>Semantic elements</li>
+          <br />
+          <li>The 'head' element contains information, or metadata, that helps the browser to render the page correctly.</li>
+          <li>Elements included within the 'head' are not visible when a user looks at a webpage.</li>
+          <li>The "section" allow us to organize the content on our page. </li>
+          <li>The 'main' tag specifies the main content of a document.</li>
+          <li>The content inside the <main> element should be unique to the document. It should not contain any content that is repeated across documents such as sidebars, navigation links, copyright information, site logos, and search forms.</li>
+          <li>The only visible element in the 'head' element is the 'title' element.</li>
+          <li>The 'meta' element defines metadata such as the character set, description, keywords, author, and viewport.</li>
+          <li>The 'charset' element sets our character encoding.</li>
+          <li>The 'http-equiv' element sets an HTTP header for content.</li>
+          <li>The 'viewport' element sets the default view for our webpage.</li>
+          <li>The 'body' element contains the content that is shown to the user.</li>
+          <li>The 'ul', 'ol', and 'li' elements represent unordered lists, ordered lists, and list items. In essence, these HTML elements represent bulleted or numbered lists.</li>
+          <li>The 'img' element contains information about images that are displayed on the webpage.</li>
+          <li>The 'src' attribute is the most important because it defines the location of the image.</li>
+          <li>The 'alt'  attribute specifies an alternate text for an image.</li>
+          <li>The 'br' element creates a line of empty space, or a line break, between two blocks of content.</li>
+          <li> the a' element (which stands for anchor) creates links to the same webpage or other webpages.</li>
+          <li>The href attribute points to the URL for the link, as shown in the following code</li>
+          <li>You can put elements inside other elements too this is called nesting</li>
+          <li>Elements that are nested inside other elements are called child elements.</li>
+          <li>Element refers to the entire element from opening tag to closing tag.</li>
+          <li>Tag refers only to what appears inside the angle brackets.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <li>The git command must precede every Git statement.</li>
+        <li>git status: show modified files in working directory.</li>
+        <li>The checkout command is to move the working branch to a new branch.</li>
+        <li>The -b flag creates a new branch.</li>
+        <li>The add command adds modifications in the current working branch to the staging area. </li>
+        <li>The -A flag indicates that we want to add all changes.</li>
+        <li>The git commit command with a commit message that describes what the commit contains.</li>
+        <li>The pull command to receive a branch's modifications into the local environment. </li>
+        <li>The origin keyword indicates the source of the pull will be in the GitHub repo.</li>
+        <li>The push command you can create a new remote branch or add new changes to an existing branch.</li>
+        <ul>
+          <li>Enter your Git notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
