Add css to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./assets/style.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,7 +34,7 @@
           <li>Elements included within the 'head' are not visible when a user looks at a webpage.</li>
           <li>The "section" allow us to organize the content on our page. </li>
           <li>The 'main' tag specifies the main content of a document.</li>
-          <li>The content inside the <main> element should be unique to the document. It should not contain any content that is repeated across documents such as sidebars, navigation links, copyright information, site logos, and search forms.</li>
+          <li>The content inside the 'main' element should be unique to the document. It should not contain any content that is repeated across documents such as sidebars, navigation links, copyright information, site logos, and search forms.</li>
           <li>The only visible element in the 'head' element is the 'title' element.</li>
           <li>The 'meta' element defines metadata such as the character set, description, keywords, author, and viewport.</li>
           <li>The 'charset' element sets our character encoding.</li>
@@ -57,12 +58,22 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>We use CSS to define style rules for specific elements of an HTML page and format them using a wide range of style options.</li>
+          <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet. </li>
+          <li>Inline styles apply to a specific HTML tag, using a style attribute with a CSS rule to style a particular page element only. </li>
+          <li>Internal style sheet contains CSS rules for the webpage in the head section of the HTML file. The rules only apply to that page.</li>
+          <li>external CCS style sheet allows developers to keep all their CSS rules in a separate file, which makes design changes easier.</li>
+          <li>Declarations contain two important components: the CSS property we want to apply and the value of the property.</li>
+          <li>A 'margin' property indicates how much space we want around the outside of an element.</li>
+          <li>'Padding' property adds space around the content inside an element.</li>
+          <il>The 'rel' attribute specifies the relationship between the current document and the linked document resource.</il>
+          <il>The 'href' attribute specifies the location (URL) of the external resource.</il>
         </ul>
       </section>
    
       <section class="card" id="git-section">
         <h2>Git</h2>
+       <ul>
         <li>The git command must precede every Git statement.</li>
         <li>git status: show modified files in working directory.</li>
         <li>The checkout command is to move the working branch to a new branch.</li>
@@ -73,9 +84,7 @@
         <li>The pull command to receive a branch's modifications into the local environment. </li>
         <li>The origin keyword indicates the source of the pull will be in the GitHub repo.</li>
         <li>The push command you can create a new remote branch or add new changes to an existing branch.</li>
-        <ul>
-          <li>Enter your Git notes here</li>
-        </ul>
+       </ul>
       </section>
    
       <section class="card" id="javascript-section">
