Added javascript notes and added some fuctions

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -91,7 +91,16 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>JavaScript (JS) is a high-level dynamic programming language that allows users to interact with websites. </li>
+          <li>A variable is simply a named container that allows us to store data in our code.</li>
+          <li>We can use the console.log method to output a message to the web console by adding an argument.</li>
+          <li>An if statement is a way of introducing decision-making into our code. </li>
+          <li>A value is considered falsy if it is one of the following values: 0, -0, On, "", null, undefined, NaN, or a Boolean data type with the value of false.</li>
+          <li>All other values, including a Boolean with the value of true.</li>
+          <li>An array is a single variable that is used to hold a group of data. Arrays are typically used to hold data that is related in some way.</li>
+          <li>A for loop uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
+          <li>To declare a function, we use the function keyword and then give our function a unique name followed by parentheses. Then we add curly brackets {} that contain the code for the task we want to perform.</li>
+          <li>By adding /* before the block of code and */ after. It should now look like the following code.</li>
         </ul>
       </section>
     </main>
